moved cart to sidebar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,11 @@
   	</div>
   	<div id ="columns">
   		<div id="side">
+        
+        <div id="cart">
+          <%= render @cart %>          
+        </div>
+
   			<ul>
   				<li><a href="http://localhost:3000/">Home</a></li>
   				<li><a href="http://www..../faq">Questions</a></li>
