--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,9 @@
   	<div id ="columns">
   		<div id="side">
         
-        <div id="cart">
-          <%= render @cart %>          
-        </div>
+        <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+          <%= render @cart %>
+        <% end %>
 
   			<ul>
   				<li><a href="http://localhost:3000/">Home</a></li>
